Name:          distributed-process-simplelocalnet
Version:       0.3.0
Cabal-Version: >=1.8
Build-Type:    Simple
License:       BSD3
License-File:  LICENSE
Copyright:     Well-Typed LLP
Author:        Duncan Coutts, Nicolas Wu, Edsko de Vries
Maintainer:    Tim Watson <watson.timothy@gmail.com>
Stability:     experimental
Homepage:      http://haskell-distributed.github.com
Bug-Reports:   https://cloud-haskell.atlassian.net/browse/DPSLN
Synopsis:      Simple zero-configuration backend for Cloud Haskell
Description:   Simple backend based on the TCP transport which offers node
               discovery based on UDP multicast. This is a zero-configuration
               backend designed to get you going with Cloud Haskell quickly
               without imposing any structure on your application.
Tested-With:   GHC==7.2.2 GHC==7.4.1 GHC==7.4.2
Category:      Control
extra-source-files: ChangeLog

Source-Repository head
  Type:     git
  Location: https://github.com/haskell-distributed/distributed-process-simplelocalnet

Library
  Build-Depends:     base >= 4.4 && < 5,
                     bytestring >= 0.9 && < 0.12,
                     exceptions >= 0.5 && <0.11,
                     network >= 3.0 && < 3.2,
                     network-multicast >= 0.1.1 && < 0.4,
                     data-accessor >= 0.2 && < 0.3,
                     binary >= 0.6.3 && < 0.9,
                     containers >= 0.4 && < 0.8,
                     transformers >= 0.2 && < 0.7,
                     network-transport >= 0.5 && < 0.6,
                     network-transport-tcp >= 0.4 && < 0.9,
                     distributed-process >= 0.5.0 && < 0.8
  Exposed-modules:   Control.Distributed.Process.Backend.SimpleLocalnet,
                     Control.Distributed.Process.Backend.SimpleLocalnet.Internal.Multicast
  Extensions:        RankNTypes,
                     DeriveDataTypeable
  ghc-options:       -Wall
  HS-Source-Dirs:    src

Test-Suite SimpleLocalNet-TestSuite
    Type:             exitcode-stdio-1.0
    Hs-Source-Dirs:   tests
    Main-Is:          Main.hs
    ghc-options:      -threaded -with-rtsopts=-N
    Build-Depends:    base
                    , distributed-process
                    , distributed-process-simplelocalnet
                    , tasty
                    , tasty-hunit
