name:           distributed-process-supervisor
version:        0.1.3.1
cabal-version:  >=1.8
build-type:     Simple
license:        BSD3
license-file:   LICENCE
stability:      experimental
Copyright:      Tim Watson 2012 - 2013
Author:         Tim Watson
Maintainer:     Facundo Domínguez <facundo.dominguez@tweag.io>
Stability:      experimental
Homepage:       http://github.com/haskell-distributed/distributed-process-supervisor
Bug-Reports:    http://github.com/haskell-distributed/distributed-process-supervisor/issues
synopsis:       Supervisors for The Cloud Haskell Application Platform
description:    A part of the Cloud Haskell framework

                This package implements a process which supervises a set of other processes, referred to as its children.
                These child processes can be either workers (i.e., processes that do something useful in your application)
                or other supervisors. In this way, supervisors may be used to build a hierarchical process structure
                called a supervision tree, which provides a convenient structure for building fault tolerant software.

                For detailed information see "Control.Distributed.Process.Supervisor"
category:       Control
tested-with:    GHC == 7.4.2 GHC == 7.6.2
data-dir:       ""
extra-source-files: ChangeLog

source-repository head
  type:      git
  location:  https://github.com/haskell-distributed/distributed-process-supervisor

library
  build-depends:
                   base >= 4.4 && < 5,
                   data-accessor >= 0.2.2.3,
                   distributed-process >= 0.5.3 && < 0.6,
                   distributed-process-extras >= 0.2.0 && < 0.3,
                   distributed-process-client-server >= 0.1.2 && < 0.2,
                   binary >= 0.6.3.0 && < 0.8,
                   deepseq >= 1.3.0.1 && < 1.5,
                   mtl,
                   containers >= 0.4 && < 0.6,
                   hashable >= 1.2.0.5 && < 1.3,
                   unordered-containers >= 0.2.3.0 && < 0.3,
                   fingertree < 0.2,
                   stm >= 2.4 && < 2.5,
                   time > 1.4 && < 1.6,
                   transformers
  if impl(ghc <= 7.5)
    Build-Depends:   template-haskell == 2.7.0.0,
                     derive == 2.5.5,
                     uniplate == 1.6.12,
                     ghc-prim
  extensions:      CPP
  hs-source-dirs:   src
  ghc-options:      -Wall
  exposed-modules:
                   Control.Distributed.Process.Supervisor
  other-modules:
                   Control.Distributed.Process.Supervisor.Types

test-suite SupervisorTests
  type:            exitcode-stdio-1.0
  build-depends:
                   base >= 4.4 && < 5,
                   ansi-terminal >= 0.5 && < 0.7,
                   containers,
                   unordered-containers,
                   hashable,
                   distributed-process >= 0.5.3 && < 0.6,
                   distributed-process-supervisor,
                   distributed-process-extras,
                   distributed-process-client-server,
                   distributed-static,
                   bytestring,
                   data-accessor,
                   fingertree < 0.2,
                   network-transport >= 0.4 && < 0.5,
                   mtl,
                   network-transport-tcp >= 0.4 && < 0.5,
                   binary >= 0.6.3.0 && < 0.8,
                   deepseq >= 1.3.0.1 && < 1.5,
                   network >= 2.3 && < 2.7,
                   HUnit >= 1.2 && < 2,
                   stm >= 2.3 && < 2.5,
                   time > 1.4 && < 1.6,
                   test-framework >= 0.6 && < 0.9,
                   test-framework-hunit,
                   transformers,
                   rematch >= 0.2.0.0,
                   ghc-prim
  hs-source-dirs:
                   tests
  ghc-options:     -Wall -threaded -rtsopts -with-rtsopts=-N -fno-warn-unused-do-bind -eventlog
  extensions:      CPP
  main-is:         TestSupervisor.hs
  other-modules:   TestUtils
