name:          distributed-process-systest
version:       0.1.0
synopsis:      Testing Frameworks and Capabilities for programs built on Cloud Haskell
homepage:      http://github.com/haskell-distributed/distributed-process-systest
license:       BSD3
license-file:  LICENSE
Author:        Tim Watson
Maintainer:    watson.timothy@gmail.com
copyright:     Tim Watson
category:      Control, Cloud Haskell
build-type:    Simple
cabal-version: >=1.8

source-repository head
  type:      git
  location:  https://github.com/haskell-distributed/distributed-process-systest

library
  exposed-modules:   Control.Distributed.Process.SysTest.Utils
  Build-Depends:     base >= 4.4 && < 5,
                     ansi-terminal >= 0.5 && < 0.7,
                     binary >= 0.5 && < 0.9,
                     bytestring >= 0.9 && < 0.11,
                     distributed-process >= 0.6.1 && < 0.7,
                     distributed-static,
                     HUnit >= 1.2 && < 1.4,
                     network-transport >= 0.4.1.0 && < 0.5,
                     network >= 2.5 && < 2.7,
                     random >= 1.0 && < 1.2,
                     rematch >= 0.1.2.1,
                     test-framework >= 0.6 && < 0.9,
                     test-framework-hunit >= 0.2.0 && < 0.4,
                     stm
  hs-source-dirs:    src
  ghc-options:       -Wall -fno-warn-unused-do-bind
  extensions:        CPP,
                     ExistentialQuantification,
                     FlexibleInstances,
                     DeriveDataTypeable,
                     DeriveGeneric,
                     GeneralizedNewtypeDeriving,
                     OverlappingInstances,
                     RankNTypes,
                     RecordWildCards,
                     ScopedTypeVariables
