Name:                distributed-static
Version:             0.1.0.0
Synopsis:            Workaround the absence of "static" in ghc
-- description:         
Homepage:            http://www.github.com/haskell-distributed/distributed-process
License:             BSD3
License-File:        LICENSE
Author:              Edsko de Vries
Maintainer:          edsko@well-typed.com
Copyright:           Well-Typed LLP
Category:            Control
Build-Type:          Simple
Cabal-Version:       >=1.8

Library
  Exposed-Modules:     Control.Distributed.Static,
                       Control.Distributed.Static.Internal.Dynamic,
                       Control.Distributed.Static.Internal.TypeRep
  Build-Depends:       base ==4.5.*,
                       containers >= 0.4 && < 0.5,
                       bytestring >= 0.0 && < 0.11,
                       binary >= 0.5 && < 0.6,
                       ghc-prim >= 0.2 && < 0.3
  HS-Source-Dirs:      src
  Extensions:          DeriveDataTypeable,
                       ScopedTypeVariables,
                       RankNTypes,
                       CPP
  GHC-Options:         -Wall
